# cargo-quick

./: .gitignore  Cargo.toml  Makefile  README.md
breakdown/src/: main.rs
cargo-quick/: Cargo.toml
cargo-quickbuild/: Cargo.toml  README.md  VIABILITY.md  cc--9e878318853e64e06985d84b82439da5fda3019e4c5e6d10337199aa3e0c93ae.toml  curl-sys--d59824966d9ef514e5266987c56f97e73335ebe0bd287107ac0fcc253e615a94.toml  jobserver--bebe97b7d8090a30adbd574f261a80e939f8d8f369d8288d7102beb2d3d59888.toml  libc--6005606a8c1297d2ee120c0fc24cc3968e273e5d4fde7a411963ce13baca018e.toml  libnghttp2-sys--432573833983ed2807295a3cd7dfd3f391ec521282fbe25fb282431690459885.toml  libz-sys--d2f3890000707f0a7c1c64f01eaf4b47360724b8b674ab259eab262d240309d7.toml  pkg-config--91609e3780dee6a71c2b564cb7e1e23454966ea3f70b04b7503de6d4659b4941.toml
cargo-quickbuild/src/: archive.rs  builder.rs  deps.rs  description.rs  fixed_tempdir.rs  main.rs  pax.rs  quick_resolve.rs  repo.rs  resolve.rs  resolve_ext.rs  scheduler.rs  stats.rs  std_ext.rs  unit_types.rs
cargo-quickbuild/src/commands/: c_repo.rs  cmd_build.rs  cmd_install.rs  cmd_repo.rs  install.rs  mod.rs
cargo-quickbuild/src/util/: command.rs  mod.rs
cargo-quickbuild/tests/testsuite/: main.rs  quickbuild.rs
experiments/: README.md  build-popular-quickinstall-releases.sh  build-problematic-package.sh  hunt-problematic-files.sh  rustc_info_json.sh  syn-minimal-repro.sh  tar-investigation.sh  tempdir-investigation.sh  worktree-investigation.sh
experiments/breakdown/: Cargo.toml
experiments/breakdown/src/: main.rs
fetch/: Cargo.toml
(+4 files in other folders)
