[package]
name = "cargo-quickbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.61.1"
crypto-hash = "0.3.4"
home = "0.5.3"
itertools = "0.10.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tempdir = "0.3.7"
