[package]
name = "cargo-quickbuild"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
cargo = { version = "0.61.1", git = "https://github.com/alsuren/cargo", branch = "quickbuild-hacks" }
crypto-hash = "0.3.4"
filetime = "0.2.16"
home = "0.5.3"
itertools = "0.10.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tar = "0.4.38"
tempdir = "0.3.7"
walkdir = "2.3.2"
