[package]
name = "breakdown"
version = "0.0.0"
authors = ["David Laban <david.laban@red-badger.com>"]
edition = "2018"

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.137", features = ["derive"] }
cargo-lock = { version = "8.0.1", features = ["dependency-tree"] }
petgraph = "0.6.2"
sha2 = "0.10.2"
globwalk = "0.8.1"
